--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "new-component": "^5.0.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
+    "react-icons": "^5.2.1",
+    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
